--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <center>
-    <button>THREE TIRE ARCHITECTURE</button>
-    </center>
-    <pre>
-        1.frontend
-        2.backend
-        3.database
-    </pre>
-    <h1>FRONT END:</h1>
-    <p>firstly,frontend refers to the  user interface the presenatation layer,which is used and interfaced by user directly</p>
-    <h1>BACKEND:</h1>
-    <p>backend refers to the logic part which runs in the background.over here processing of data,handling requests etc..</p>
-    <h1>DATABASE:</h1>
-    <p>lastly database is the structured arrangement of data.typically it is used to storage large amount of data</p>
+<h1>RESTURANT</h1>
+<pre>
+VEG ITEMS:
+1.veg birayani
+2.special veg birayani
+3.panner birayani
+</pre>
+<pre>
+NON-VEG ITEMS:
+1.dum-birayani
+2.chicken fry birayani
+3.special dum birayani
+</pre>
 </body>
 </html>
